accessibility fix for clicking the portfolio image wrap div (opens details view)

--- a/src/components/PortfolioShowcase/portfolio-showcase.module.css
+++ b/src/components/PortfolioShowcase/portfolio-showcase.module.css
@@ -1,5 +1,5 @@
 :root {
-  --showcase-height: 70vh;
+  --showcase-height: 60vh;
 }
 
 .wrap {
