--- a/src/components/PortfolioShowcase/ps-slider.module.css
+++ b/src/components/PortfolioShowcase/ps-slider.module.css
@@ -32,7 +32,7 @@
 }
 .details-col-fade-in {
   position: relative;
-  transform: translateY(14px);
+  transform: translateY(-8px);
   z-index: 1;
   height: var(--slider-height);
   opacity: 1;
